IDL-89 Reset commits to remove github token
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-ui-workspace/projects/openidl-ui/src/index.html
+++ b/openidl-ui-workspace/projects/openidl-ui/src/index.html
@@ -6,7 +6,7 @@
 		<base href="/" />
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; font-src 'self' *.gstatic.com/; style-src 'self' *.googleapis.com/ 'unsafe-inline'; connect-src 'self' https://openidl-lyubo-test.auth.eu-central-1.amazoncognito.com"
+			content="default-src 'self'; font-src 'self' *.gstatic.com/; style-src 'self' *.googleapis.com/ 'unsafe-inline'; connect-src 'self' https://openidl-lyubo-test.auth.eu-central-1.amazoncognito.com https://cognito-idp.eu-central-1.amazonaws.com"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="noreferrer" content="origin" />
