--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/index.html
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/index.html
@@ -6,7 +6,7 @@
 		<base href="/" />
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'self' https:; font-src 'self' *.gstatic.com/; style-src 'self' *.googleapis.com/ 'unsafe-inline';connect-src *openidl-lyubo-test.auth.eu-central-1.amazoncognito.com"
+			content="default-src 'self' https:; font-src 'self' *.gstatic.com/; style-src 'self' *.googleapis.com/ 'unsafe-inline';"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="noreferrer" content="origin" />
